--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -13,6 +13,10 @@ permissions:
   id-token: write
   pull-requests: write  # For commenting on PRs
 
+concurrency:
+  group: terraform-deploy
+  cancel-in-progress: false
+
 jobs:
   plan:
     runs-on: ubuntu-latest
@@ -109,12 +113,12 @@ jobs:
         run: terraform init -input=false
         working-directory: ./infra
 
-      # Plan and Apply
+      # Plan
       - name: Terraform Plan
-        run: terraform plan -input=false
+        run: terraform plan -input=false -out=tfplan
         working-directory: ./infra
 
-      # Apply
+      # Apply the saved plan (guarantees what was reviewed is what gets applied)
       - name: Terraform Apply
-        run: terraform apply -input=false -auto-approve
+        run: terraform apply -input=false tfplan
         working-directory: ./infra
