--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -62,9 +62,11 @@ jobs:
 
       # Security Scan with Checkov
       - name: Run Checkov Security Scan
-        run: |
-          pip install checkov
-          checkov -d ./infra --framework terraform --output cli
+        uses: bridgecrewio/checkov-action@v12
+        with:
+          directory: infra
+          framework: terraform
+          output_format: cli
         continue-on-error: true
 
       # Plan
