--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches: [ "main" ]
     paths: [ "infra/**" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -89,7 +90,7 @@ jobs:
   apply:
     runs-on: ubuntu-latest
     environment: PROD
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     
     steps:
       # Checkout repository
