--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -12,7 +12,8 @@ on:
 permissions:
   contents: read
   id-token: write
-  pull-requests: write  # For commenting on PRs
+  pull-requests: write
+  security-events: write  # For uploading Checkov SARIF results
 
 concurrency:
   group: terraform-deploy
@@ -67,8 +68,15 @@ jobs:
         with:
           directory: infra
           framework: terraform
-          output_format: cli
+          output_format: sarif
+          output_file_path: checkov-results.sarif
         continue-on-error: true
+
+      - name: Upload Checkov results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: checkov-results.sarif
 
       # Plan
       - name: Terraform Plan
